fix: #63 new ui design and dark mode

--- a/assets/scss/components/_algolia.scss
+++ b/assets/scss/components/_algolia.scss
@@ -182,6 +182,12 @@
   text-align: left;
 }
 
+[data-dark-mode] .aa-Form {
+  background: #1b1f22;
+  border: 1px solid transparent;
+  color: #dee2e6;
+}
+
 .aa-Form {
   align-items: center;
   border-radius: 3px;
@@ -197,7 +203,13 @@
   &[focus-within],
   &:focus-within {
     border: 1px solid #5d2f86;
+    transition: border 0.2s ease;
   }
+}
+
+[data-dark-mode] .aa-Form::after {
+  color: #dee2e6;
+  border: 1px solid #495057;
 }
 
 .aa-Form::after {
@@ -210,12 +222,12 @@
   height: 1.5rem;
   padding-right: 0.3125rem;
   padding-left: 0.3125rem;
-  font-size: $font-size-base * 0.75;
-  color: $gray-700;
+  font-size: .75rem;
+  color: #495057;
   content: "Ctrl + /";
-  border: 1px solid $gray-300;
+  border: 1px solid #dee2e6;
   border-radius: 0.25rem;
-
+  
   @include media-breakpoint-up(md) {
     right: -1.4625rem;
   }
@@ -225,12 +237,11 @@
   }
 }
 
+/* Lupa */
 .aa-InputWrapperPrefix {
   align-items: center;
   display: flex;
-  flex-shrink: 0;
-  height: 44px;
-  height: var(--aa-search-input-height);
+  height: auto;
   order: 1;
 }
 
@@ -286,17 +297,38 @@
   width: 100%;
 }
 
+[data-dark-mode] .aa-Input {
+  background: #1b1f22;
+  border: 1px solid transparent;
+  color: #dee2e6;
+}
+
+[data-dark-mode] .aa-Input::placeholder {
+  color: #ced4da;
+  opacity: 1;
+}
+
+[data-dark-mode] .aa-Label svg {
+  color: #ced4da;
+  opacity: 1;
+}
+
+[data-dark-mode] .aa-Form:focus-within {
+  border: 1px solid #8ed6fb;
+  transition: border 0.2s ease;
+
+  svg {
+    color: #8ed6fb;
+    transition: color 0.2s ease;
+  }
+}
+
 .aa-Input {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
   background: none;
   border: 0;
-  color: #262627;
-  color: rgba(var(--aa-text-color-rgb), var(--aa-text-color-alpha));
-  font: inherit;
-  height: 44px;
-  height: var(--aa-search-input-height);
   padding: 0;
   width: 100%;
 
